--- a/src/CommNext/CommNext.csproj
+++ b/src/CommNext/CommNext.csproj
@@ -7,7 +7,6 @@
         <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.1" PrivateAssets="all"/>
         <PackageReference Include="BepInEx.Core" Version="5.*"/>
         <PackageReference Include="HarmonyX" Version="2.10.1"/>
-        <PackageReference Include="KerbalSpaceProgram2.GameLibs" Version="0.2.0" PrivateAssets="all" Publicize="true"/>
         <PackageReference Include="SpaceWarp" Version="1.8.0"/>
         <PackageReference Include="SpaceWarp.PluginInfoProps" Version="1.*"/>
         <PackageReference Include="UitkForKsp2" Version="2.4.0"/>
@@ -16,6 +15,11 @@
     <ItemGroup Label="Project references">
         <!-- Add references to any other projects in your solution that you want to use in your mod here -->
         <ProjectReference Include="..\CommNext.Unity\CommNext.Unity.csproj" Private="false"/>
+    </ItemGroup>
+    <ItemGroup>
+      <Reference Include="Assembly-CSharp">
+        <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program 2\KSP2_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      </Reference>
     </ItemGroup>
 </Project>
 
