Test shortening conditional references

--- a/src/CommNext/CommNext.csproj
+++ b/src/CommNext/CommNext.csproj
@@ -17,19 +17,27 @@
         <ProjectReference Include="..\CommNext.Unity\CommNext.Unity.csproj" Private="false"/>
     </ItemGroup>
     <!-- Use Assembly-CSharp from the game as a reference locally to enable debugging in Deploy and DeployAndRun -->
-    <Choose>
-        <When Condition="$(ConfigurationName) == Deploy Or $(ConfigurationName) == DeployAndRun">
-            <ItemGroup>
-                <Reference Include="Assembly-CSharp">
-                    <HintPath>$(KSP2DIR)\KSP2_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
-                </Reference>
-            </ItemGroup>
-        </When>
-        <Otherwise>
-            <ItemGroup>
-                <PackageReference Include="KerbalSpaceProgram2.GameLibs" Version="0.2.1"/>
-            </ItemGroup>
-        </Otherwise>
-    </Choose>
+    <ItemGroup Condition="$(ConfigurationName) != 'Release'">
+        <Reference Include="Assembly-CSharp">
+            <HintPath>$(KSP2DIR)\KSP2_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
+        </Reference>
+    </ItemGroup>
+    <ItemGroup Condition="$(ConfigurationName) == 'Release'">
+        <PackageReference Include="KerbalSpaceProgram2.GameLibs" Version="0.2.1"/>
+    </ItemGroup>
+<!--    <Choose>-->
+<!--        <When Condition="$(ConfigurationName) == Deploy Or $(ConfigurationName) == DeployAndRun">-->
+<!--            <ItemGroup>-->
+<!--                <Reference Include="Assembly-CSharp">-->
+<!--                    <HintPath>$(KSP2DIR)\KSP2_x64_Data\Managed\Assembly-CSharp.dll</HintPath>-->
+<!--                </Reference>-->
+<!--            </ItemGroup>-->
+<!--        </When>-->
+<!--        <Otherwise>-->
+<!--            <ItemGroup>-->
+<!--                <PackageReference Include="KerbalSpaceProgram2.GameLibs" Version="0.2.1"/>-->
+<!--            </ItemGroup>-->
+<!--        </Otherwise>-->
+<!--    </Choose>-->
 </Project>
 
