--- a/src/CommNext.Unity/CommNext.Unity/Packages/manifest.json
+++ b/src/CommNext.Unity/CommNext.Unity/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.feature.development": "1.0.1",
+    "com.unity.shadergraph": "14.0.8",
     "uitkforksp2.controls": "https://github.com/UitkForKsp2/UitkForKsp2.Unity.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -35,4 +36,3 @@
     "com.unity.modules.xr": "1.0.0"
   }
 }
-
