--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,16 @@ jobs:
 
       - name: Install jq
         uses: dcarbone/install-jq-action@v2.1.0
+        
+      - name: Check version
+        run: |
+          version=$(jq -r '.version' plugin_template/swinfo.json)
+          echo "Tag is ${{ github.ref_name }}"
+          if [[ "${{ github.ref_name }}" != "v$version" ]];
+          then
+            echo "Invalid version tag: ${{ github.ref_name }}. Expected v$version."
+            exit 1
+          fi
 
       - name: Build the solution
         run: dotnet build "CommNext.sln" -c Release
