--- a/src/CommNext/CommNext.csproj
+++ b/src/CommNext/CommNext.csproj
@@ -15,6 +15,9 @@
         <PackageReference Include="UitkForKsp2" Version="2.4.0"/>
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.5"/>
     </ItemGroup>
+    <ItemGroup Label="Compiled C Libraries">
+        <Reference Include="..\CommNext.Native\CommNext.Native.dll"/>
+    </ItemGroup>
     <ItemGroup Label="Project references">
         <!-- Add references to any other projects in your solution that you want to use in your mod here -->
         <ProjectReference Include="..\CommNext.Unity\CommNext.Unity.csproj" Private="false"/>
